# tarp

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yaml  python-app.yml
docs/source/: conf.py  index.md
notebooks/: test.ipynb
scripts/: correlated_gaussian.py  distances.py  gaussian.py  prior_example.py  prior_example_refs.py  random_dist.py
src/blanket/: drp.py
src/tarp/: __init__.py  drp.py
src/tarppp/: __init__.py  tarppp.py
tests/: test_drp.py
