[project]
name = "tarp"
version = "0.0.2"
authors = [
    {name = "Adam Coogan", email = "dr.adam.coogan@gmail.com"},
    {name = "Pablo Lemos", email = "plemos91@gmail.com"},
]
description = "Statistical coverage testing in python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bayesian", "coverage", "posterior", "statistics"]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "build",
    "furo",
    "myst-parser",
    "pip",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-pyproject",
    "twine",
]

[project.urls]
homepage = "https://github.com/Ciela-Institute/tarp"
repository = "https://github.com/Ciela-Institute/tarp"
documentation = "https://tarp.readthedocs.io/en/latest/"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
