[project]
name = "tarppp"
version = "0.1.3"
authors = [
    {name = "Pablo Lemos", email = "plemos91@gmail.com"},
]
description = "Tarp ++"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bayesian", "coverage", "posterior", "statistics"]
dependencies = ["numpy", "tqdm", "deprecation"]

[project.optional-dependencies]
dev = [
    "build",
    "furo",
    "myst-parser",
    "pip",
    "pytest",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-pyproject",
    "twine",
]

[project.urls]
repository = "https://github.com/Pablo-Lemos/tarppp"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
